--- a/Pratica_01/app/build.gradle
+++ b/Pratica_01/app/build.gradle
@@ -12,22 +12,23 @@ plugins {
     id 'application'
 }
 
-repositories {
-    // Use JCenter for resolving dependencies.
-    jcenter()
-}
-
-dependencies {
-    // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13'
-
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:29.0-jre'
-}
-
 application {
     // Define the main class for the application.
     mainClass = 'fatec.labvi.Calculadora'
+}
+
+repositories {
+    // Use mavenCentral for resolving dependencies.
+    mavenCentral()
+}
+
+dependencies {
+    testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+}
+
+test{
+    useJUnitPlatform()
 }
 
 sourceSets{
